[gd_scene load_steps=4 format=2]

[ext_resource path="res://utils/interactive/Interactive.gd" type="Script" id=1]
[ext_resource path="res://interface/fonts/small-pixel.tres" type="DynamicFont" id=2]

[sub_resource type="CylinderShape" id=1]
radius = 3.0
height = 1.0

[node name="Interactive" type="Spatial"]
script = ExtResource( 1 )

[node name="Area" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 1 )

[node name="InteractionText" type="Label" parent="."]
visible = false
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -24.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 0
text = "Press e to interact"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area" to="." method="_on_Area_body_exited"]
